PROJECT( VTKITK )

FIND_PACKAGE( ITK )
IF ( ITK_FOUND )
	INCLUDE( ${USE_ITK_FILE} )
ENDIF( ITK_FOUND )

FIND_PACKAGE( VTK )
IF ( VTK_FOUND )
	INCLUDE( ${USE_VTK_FILE} )
ENDIF( VTK_FOUND )

INCLUDE_DIRECTORIES( ${VTKITK_SOURCE_DIR} )

ADD_EXECUTABLE( VTKITK VTKITK.cpp )

TARGET_LINK_LIBRARIES( VTKITK
	ITKBasicFilters ITKCommon ITKIO
	vtkRendering vtkGraphics vtkHybrid
	vtkImaging vtkFiltering vtkCommon
)